Add delivery window text to MenuInfo component and style it for better visibility

--- a/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
+++ b/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
@@ -20,6 +20,7 @@
                     </div>
                 }
             </div>
+            <div class="delivery-time-window-text">Delivery Window: 6-8 PM on your chosen Wednesday</div>
         </div>
         <div class="menu-title-block">
             <h2 class="menu-title">Pick Your Platter</h2>
