--- a/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor.css
+++ b/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor.css
@@ -66,10 +66,10 @@
     font-weight: 700;
     color: #222;
 }
-.delivery-time-window-text{
+.delivery-time-text{
 
-    font-size: 0.75rem;
-    text-align: right;
+    font-size: 0.9rem;
+    text-align: center;
     color: #555;
     font-family: 'Montserrat', sans-serif;
     margin-top: 1rem;
