--- a/misas-thai-street-cuisine-2.0/_Imports.razor
+++ b/misas-thai-street-cuisine-2.0/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazorise
+@using MudBlazor
 @using misas_thai_street_cuisine_2._0.Services
 @using misas_thai_street_cuisine_2._0.Models
