--- a/misas-thai-street-cuisine-2.0/Pages/Contact.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Contact.razor
@@ -18,12 +18,14 @@
         </div>
         <div class="contact-item">
             <h5>Socials</h5>
-            <a href="https://www.facebook.com/MisasThaiStreetCuisine" target="_blank" class="btn btn-primary">
-                <i class="fab fa-facebook-f"></i> Like us on Facebook
-            </a>
-            <a href="https://www.instagram.com/misasthaistreetcuisine/" target="_blank" class="btn btn-instagram">
-                <i class="fab fa-instagram"></i> Follow us on Instagram
-            </a>
+            <div class="social-buttons">
+                <a href="https://www.facebook.com/MisasThaiStreetCuisine" target="_blank" class="btn btn-primary">
+                    <i class="fab fa-facebook-f"></i> Like us on Facebook
+                </a>
+                <a href="https://www.instagram.com/misasthaistreetcuisine/" target="_blank" class="btn btn-instagram">
+                    <i class="fab fa-instagram"></i> Follow us on Instagram
+                </a>
+            </div>
         </div>
     </div>
 </div>
