--- a/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
+++ b/misas-thai-street-cuisine-2.0/Components/MenuInfo.razor
@@ -20,7 +20,8 @@
                     </div>
                 }
             </div>
-            <div class="delivery-time-text">Delivery Window: 6-8 PM on your chosen Wednesday</div>
+            <div class="delivery-time-text">Delivery Window: 6-8 PM on your chosen Wednesday.</div>
+            <div class="delivery-time-sub-text">More exact delivery times will be finalized after the order deadline.</div>
         </div>
         <div class="menu-title-block">
             <h2 class="menu-title">Pick Your Platter</h2>
