Centered Map on St. Johns

--- a/misas-thai-street-cuisine-2.0/Components/DeliveryArea.razor
+++ b/misas-thai-street-cuisine-2.0/Components/DeliveryArea.razor
@@ -48,8 +48,8 @@
     public string ZipCode { get; set; } = string.Empty;
     public string? ResultMessage { get; set; }
     public string? ResultType { get; set; } = "success";
-    public double MapLat { get; set; } = 30.3322;
-    public double MapLng { get; set; } = -81.6557;
+    public double MapLat { get; set; } = 30.0760424;
+    public double MapLng { get; set; } = -81.5930703;
     
     private readonly string MapId = "google-map-main";
 
