--- a/misas-thai-street-cuisine-2.0/Components/GoogleMap.razor
+++ b/misas-thai-street-cuisine-2.0/Components/GoogleMap.razor
@@ -5,8 +5,8 @@
 </div>
 
 @code {
-    [Parameter] public double Latitude { get; set; } = 30.006538;
-    [Parameter] public double Longitude { get; set; } = -81.6951407;
+    [Parameter] public double Latitude { get; set; } = 30.0760424;
+    [Parameter] public double Longitude { get; set; } = -81.5930703;
     [Parameter] public int Zoom { get; set; } = 10;
     [Parameter] public string? MapId { get; set; }
     [Inject] private IJSRuntime JS { get; set; } = default!;
